--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
   <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Teko" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Teko" rel="stylesheet">
+  <link 
+  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
+  rel="stylesheet"  type='text/css'>
+  <script src="https://kit.fontawesome.com/0f4390432c.js" crossorigin="anonymous"></script></head>
 <body>
   <app-root></app-root>
 </body>
