--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Teko" rel="stylesheet">
   <link 
-  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
+  href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
   rel="stylesheet"  type='text/css'>
   <script src="https://kit.fontawesome.com/0f4390432c.js" crossorigin="anonymous"></script></head>
 <body>
