Add basic key words

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Collins Muthinja Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="I am Collins Muthinja. A software developer, entrepreneur and writer interested in
+  design and development of products that help improve lives.">
+  <meta name="keywords" content="Mobile App Developer, Website Designer, Backend And Database Architecture, Fullstack Developer, Cloud Architect, Digital Marketer, Content Writer">
   <link rel="icon" type="image/x-icon" href="./assets/icon.png">
   <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
