--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,9 @@
   <link 
   href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
   rel="stylesheet"  type='text/css'>
-  <script src="https://kit.fontawesome.com/0f4390432c.js" crossorigin="anonymous"></script></head>
 <body>
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/0f4390432c.js" crossorigin="anonymous"></script></head>
+  <!-- <script type="text/javascript" src="assets/js/jquery-2.1.1.min.js"></script> -->
 </body>
 </html>
