Add analytics code

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,14 @@
 <body>
   <app-root></app-root>
   <script src="https://kit.fontawesome.com/0f4390432c.js" crossorigin="anonymous"></script></head>
-  <!-- <script type="text/javascript" src="assets/js/jquery-2.1.1.min.js"></script> -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DZMHYRVEMX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-DZMHYRVEMX');
+  </script>
 </body>
 </html>
